tests/machine/x/cobol/closure.error
error: cobc error: exit status 1
/workspace/mochi/tests/machine/x/cobol/closure.cob:7: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/closure.cob: in paragraph 'ADDER':
/workspace/mochi/tests/machine/x/cobol/closure.cob:12: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/closure.cob:13: error: 'X' cannot be used here
/workspace/mochi/tests/machine/x/cobol/closure.cob:13: error: 'Y' cannot be used here


source:
fun makeAdder(n: int): fun(int): int {
  return fun(x: int): int => x + n
}

let add10 = makeAdder(10)
print(add10(7))  // 17
